# esp32_aiot

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/: CMakeLists.txt
components/LinkSDK/: ChangeLog.md
components/LinkSDK/components/ntp/: ntp_private.h
components/LinkSDK/core/sysdep/: core_adapter.c
components/LinkSDK/demos/: data_model_basic_demo.c
components/app_aiot/app_dynreg/: app_dynreg.c  app_dynreg.h
components/app_aiot/app_flash/: app_flash.c  app_flash.h
components/app_aiot/app_ntp/: app_ntp.c  app_ntp.h
components/app_aiot/app_ota/: app_ota.c  app_ota.h
components/app_aiot/app_version/: app_version.c  app_version.h
components/app_aiot/data-model/: app_data_md.c  app_data_md.h
main/: main.c
